--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
   </head>
   <body>
     <center>
-      <header>
-        <center>
 
-            <ul>
+
+
+
+      <header>
+
+
+            <ul class="navul">
               <a href="index.html"><li class="navlist" >Home</li></a>
               <a href="methedology.html"><li class="navlist" >Methodology</li></a>
               <a href="review.html"><li class="navlist" >Literature</li></a>
@@ -19,8 +23,15 @@
               <a href="creators.html"><li class="navlist" >Creators</li></a>
               <a href="contact.html"><li class="navlist" >Contact</li></a>
           </ul>
-        </center>
+      
       </header>
+
+
+
+
+
+
+
       <div class="contenthome">
         <center>
 
