--- a/methedology.html
+++ b/methedology.html
@@ -9,19 +9,22 @@
   </head>
   <body>
     <center>
-      <header>
-        <center>
-          <ul class="nav">
-            <a href="index.html"><li class="navlist" >Home</li></a>
-            <a href="methedology.html"><li class="navlist" >Methodology</li></a>
-            <a href="review.html"><li class="navlist" >Literature</li></a>
-            <a href="results.html"><li class="navlist" >Results</li></a>
-            <a href="creators.html"><li class="navlist" >Creators</li></a>
-            <a href="contact.html"><li class="navlist" >Contact</li></a>
 
-          </ul>
-        </center>
-      </header>
+
+            <header>
+
+
+                  <ul class="navul">
+                    <a href="index.html"><li class="navlist" >Home</li></a>
+                    <a href="methedology.html"><li class="navlist" >Methodology</li></a>
+                    <a href="review.html"><li class="navlist" >Literature</li></a>
+                    <a href="results.html"><li class="navlist" >Results</li></a>
+                    <a href="creators.html"><li class="navlist" >Creators</li></a>
+                    <a href="contact.html"><li class="navlist" >Contact</li></a>
+                </ul>
+
+            </header>
+
       <div class="contentmeth">
         <center>
 
